<resources>
    <string name="app_name" translatable="false">ParkingInfo</string>
    <string name="parking_total">Plazas totales</string>
    <string name="parking_free">Plazas libres</string>
    <string name="map_description">Botón para acceder a la localización del parking y calcular la ruta</string>
    <string name="parking_icon_description">Icono de parking</string>
    <string name="settings">Configuración</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="link">Enlace de descarga:</string>
    <string name="new_link">Nuevo enlace:</string>
    <string name="link_hint">Enlace</string>
    <string name="save_description">Guardar</string>
    <string name="no_link">No hay enlace</string>
    <string name="update_error">Error. Sin conexión a Internet o servidor no disponible</string>
    <string name="loading">Consultando datos</string>
    <string name="refresh_description">Botón para actualizar la lista</string>
    <string name="refresh_message">Actualizado</string>
    <string name="price">Precio</string>
    <string name="schedule">Horario</string>
    <string name="schedule_value">%1$s - %2$s</string>
    <string name="more">Desplegar más información</string>
    <string name="day">día</string>
    <string name="hour">hora</string>
    <string name="coin" translatable="false">€</string>
    <string name="no_value" translatable="false">-</string>
    <string name="distance">Distancia</string>
    <string name="kilometres" translatable="false">m</string>
    <string name="open">Abierto</string>
    <string name="filter">Filtrar</string>
    <string name="permission_info">Para poder usar la aplicación con toda su funcionalidad, se necesita el permiso de localización, de no ser así, alguno de los filtros no estará disponible</string>
    <string name="grant_permission">Dar permiso</string>
    <string name="cancel">Cancelar</string>
    <string name="disable_filter">El filtro de distancia está deshabilitado</string>
    <string name="turn_on_location">No se ha podido obtener la posición</string>
    <string name="filter_description">Botón para filtrar la lista con unos parámetros</string>
    <string name="parkings" translatable="false">Parkings</string>
    <string name="favorites">Favoritos</string>
    <string name="favorite_button">Botón para seleccionar como favorito un parking</string>
    <string name="coind">€/día</string>
    <string name="title_map_activity" translatable="false">MapsActivity</string>
    <string name="location_mode">Método de localización:</string>
    <string name="current_location">Posición actual</string>
    <string name="choose_location">Escoger ubicación</string>
    <string name="map_hint">Pulse el botón del mapa</string>
    <string name="mark_position">Marque la localización deseada y pulse aquí</string>
    <string name="location_option">Destino del viaje</string>
    <string name="title_travel_activity" translatable="false">TravelDestinationActivity</string>

</resources>