<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/parking_icon_description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#fff"
                android:text="@string/app_name"
                android:gravity="bottom"
                android:textSize="20sp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/downloadlink"
            app:layout_constraintTop_toBottomOf="@id/downloadlink" />

        <TextView
            android:id="@+id/downloadlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/new_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/new_link"
            app:layout_constraintStart_toStartOf="@id/link"
            app:layout_constraintTop_toBottomOf="@id/link" />

        <EditText
            android:id="@+id/new_link_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/link_hint"
            android:hint="@string/link_hint"
            android:inputType="textUri"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@id/new_link"
            app:layout_constraintTop_toBottomOf="@id/new_link" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:contentDescription="@string/save_description"
            app:layout_constraintStart_toEndOf="@id/new_link_edit"
            app:layout_constraintTop_toTopOf="@id/new_link_edit"
            app:srcCompat="@android:drawable/ic_menu_save"
            android:background="@android:color/transparent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/location_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/location_mode"
            app:layout_constraintStart_toStartOf="@id/new_link_edit"
            app:layout_constraintTop_toBottomOf="@id/new_link_edit" />

        <RadioGroup
            android:id="@+id/location_options_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/location_mode"
            app:layout_constraintTop_toBottomOf="@id/location_mode" >

            <RadioButton
                android:id="@+id/current_position_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/select_position_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_location"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>

        <TextView
            android:id="@+id/position_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/map_hint"
            android:maxLength="23"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/location_options_group"
            app:layout_constraintStart_toEndOf="@+id/location_options_group"/>

        <ImageButton
            android:id="@+id/select_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:contentDescription="@string/save_description"
            app:layout_constraintBottom_toBottomOf="@id/position_selected"
            app:layout_constraintStart_toEndOf="@id/position_selected"
            android:src="@drawable/ic_map"
            android:background="@android:color/transparent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>